# librx888

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  librx888.pc.in
.github/workflows/: CI.yml  codeql-analysis.yml
cmake/: rx888Config.cmake
include/: CMakeLists.txt  bbrf103_variant.h  hf103_variant.h  librx888.h  rx888.h  rx888_export.h  rx888_variant.h  rx888mk2_variant.h
src/: CMakeLists.txt  bbrf103_variant.c  hf103_variant.c  librx888.c  rx888_rec.c  rx888_test.c  rx888_variant.c  rx888mk2_variant.c
src/convenience/: convenience.c  convenience.h
src/getopt/: getopt.c  getopt.h
